--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,24 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Provider:</strong>
-  <%= @user.provider %>
+  <%= image_tag @user.image_url %>
 </p>
-
 <p>
-  <strong>Uid:</strong>
-  <%= @user.uid %>
-</p>
-
-<p>
-  <strong>Nickname:</strong>
   <%= @user.nickname %>
 </p>
 
-<p>
-  <strong>Image url:</strong>
-  <%= @user.image_url %>
-</p>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Back', achievements_path %>
