--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,37 @@
   </head>
 
   <body>
-    <%= link_to 'Twitterログイン', '/auth/twitter' %>
-    <%= link_to 'ログアウト', logout_path %>
-    <%= link_to current_user.nickname, user_path(current_user.id) if current_user %>
-    <%= yield %>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <%= link_to 'Unlock', root_path, class: "navbar-brand" %>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+          </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <% if current_user %>
+                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <%= current_user.nickname %>
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                  <%= link_to 'マイページ', user_path(current_user), class: "dropdown-item" %>
+                  <div class="dropdown-divider"></div>
+                  <%= link_to 'ログアウト', logout_path, class: "dropdown-item" %>
+                </div>
+              <% else %>
+                <%= link_to 'Twitterログイン', '/auth/twitter', class: "nav-link" %>
+              <% end %>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
