--- a/app/views/achievements/index.html.erb
+++ b/app/views/achievements/index.html.erb
@@ -7,19 +7,20 @@
 </nav>
 
 <div class="row">
-  <div class="col-lg-2 offset-lg-10 col-md-3 offset-md-9 col-6 offset-6">
+  <div class="col-12">
   <%= link_to '実績を登録する', new_achievement_path, class: "btn btn-success" %>
   </div>
 </div>
 <hr>
-<ul>
+<div class="row">
   <% @achievements.each do |achievement| %>
-  <div class="card">
-    <div class="card-body">
-      <h5 class="card-title"><%= achievement.title %></h5>
+    <div class="col-12">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><%= achievement.title %></h5>
+        </div>
+      </div>
+      <br>
     </div>
-  </div>
-  <br>
   <% end %>
-</ul>
-
+</div>
