--- a/app/views/achievements/index.html.erb
+++ b/app/views/achievements/index.html.erb
@@ -18,6 +18,7 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title"><%= achievement.title %></h5>
+          <%= button_to 'ブックマーク', user_bookmarks_path(current_user), params: { bookmark: { achievement_id: achievement.id } }, class: "btn btn-primary" %>
         </div>
       </div>
       <br>
