--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,4 @@
 <br>
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <%= link_to 'ホーム', root_path, class: "breadcrumb-item" %>
-    <li class="breadcrumb-item active" aria-current="page">マイページ</li>
-  </ol>
-</nav>
-
 <%= image_tag @user.image_url, class: "rounded-circle" %>
 <%= @user.nickname %>
 <%= link_to '登録実績編集', edit_user_path(current_user), class: "btn btn-info" if @user == current_user %>
@@ -17,7 +10,27 @@
         <div class="card-header"><%= bookmark.achievement.title %></div>
         <div class="card-body">
           <p><%= bookmark.status %><p>
-          <%= button_to '解除', user_bookmark_path(current_user, bookmark), method: :patch, class: "btn btn-primary" if @user == current_user && bookmark.locked? %>
+          <% if @user == current_user && bookmark.locked? %>
+            <button type="button" class="btn btn-primary" id="unlock_button-<%= bookmark.id %>" data-toggle="modal" data-target="#unlockModal-<%= bookmark.id %>">実績解除</button>
+            <div class="modal fade" id="unlockModal-<%= bookmark.id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title"><%= bookmark.achievement.title %></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body" id="modal-body-<%= bookmark.id %>">
+                  </div>
+                  <div class="modal-footer" id="modal-footer-<%= bookmark.id %>">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">戻る</button>
+                    <%= button_to '解除', user_bookmark_path(current_user, bookmark), remote: true, method: :patch, class: "btn btn-primary" %>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <% end %>
         </div>
       </div>
       <br>
