--- a/app/views/bookmarks/update.js.erb
+++ b/app/views/bookmarks/update.js.erb
@@ -1,4 +1,4 @@
-$("#modal-body-<%= @bookmark.id %>").html('<%= j(render "unlocked_modal_body") %>')
+$("#modal-body-<%= @bookmark.id %>").html('<%= j(render "unlocked_modal_body", { bookmark: @bookmark }) %>')
 $("#modal-footer-<%= @bookmark.id %>").html('<%= j(render "unlocked_modal_footer") %>')
 $("#unlock_button-<%= @bookmark.id %>").remove()
 $("meta[name='description']").attr("content", "@<%= @bookmark.user.nickname %> さんが実績を解除しました")
