feat: 実績解除後のページを作成

--- a/app/views/bookmarks/_unlocked_modal_body.html.erb
+++ b/app/views/bookmarks/_unlocked_modal_body.html.erb
@@ -11,7 +11,7 @@
 <br>
 <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button"
    data-text="実績を解除しました!"
-   data-url="<%= user_url(bookmark.user) %>"
+   data-url="<%= user_bookmark_url(current_user, bookmark) %>"
    data-lang="ja"
    target="_blank"
    rel="noopener noreferrer">Tweet</a>
