--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,38 +2,27 @@
 <%= image_tag @user.image_url, class: "rounded-circle" %>
 <%= @user.nickname %>
 <%= link_to '登録実績編集', edit_user_path(current_user), class: "btn btn-info" if @user == current_user %>
-<hr>
-<div class="row">
-  <% @user.bookmarks.each do |bookmark| %>
-    <div class="col-12">
-      <div class="card">
-        <div class="card-header"><%= bookmark.achievement.title %></div>
-        <div class="card-body">
-          <p><%= bookmark.status %><p>
-          <% if @user == current_user && bookmark.locked? %>
-            <button type="button" class="btn btn-primary" id="unlock_button-<%= bookmark.id %>" data-toggle="modal" data-target="#unlockModal-<%= bookmark.id %>">実績解除</button>
-            <div class="modal fade" id="unlockModal-<%= bookmark.id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title"><%= bookmark.achievement.title %></h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <div class="modal-body" id="modal-body-<%= bookmark.id %>">
-                  </div>
-                  <div class="modal-footer" id="modal-footer-<%= bookmark.id %>">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">戻る</button>
-                    <%= button_to '解除', user_bookmark_path(current_user, bookmark), remote: true, method: :patch, class: "btn btn-primary" %>
-                  </div>
-                </div>
-              </div>
-            </div>
-          <% end %>
-        </div>
-      </div>
-      <br>
+<br>
+<br>
+
+<ul class="nav nav-pills nav-fill" id="pills-tab" role="tablist">
+  <li class="nav-item">
+    <a class="nav-link active" id="pills-unlocked-tab" data-toggle="pill" href="#pills-unlocked" role="tab" aria-controls="pills-unlocked" aria-selected="true">解除済</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="pills-locked-tab" data-toggle="pill" href="#pills-locked" role="tab" aria-controls="pills-locked" aria-selected="false">未解除</a>
+  </li>
+</ul>
+<br>
+<div class="tab-content" id="pills-tabContent">
+  <div class="tab-pane fade show active" id="pills-unlocked" role="tabpanel" aria-labelledby="pills-unlocked-tab">
+    <div class="row">
+      <%= render 'bookmarks', { bookmarks: @unlocked_bookmarks } %>
     </div>
-  <% end %>
+  </div>
+  <div class="tab-pane fade" id="pills-locked" role="tabpanel" aria-labelledby="pills-locked-tab">
+    <div class="row">
+      <%= render 'bookmarks', { bookmarks: @locked_bookmarks } %>
+    </div>
+  </div>
 </div>
