--- a/app/views/bookmarks/_unlocked_modal_footer.html.erb
+++ b/app/views/bookmarks/_unlocked_modal_footer.html.erb
@@ -1,1 +1,1 @@
-<button type="button" class="btn btn-secondary" data-dismiss="modal">戻る</button>
+<button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="window.location.reload();">戻る</button>
