--- a/app/views/users/_bookmarks.html.erb
+++ b/app/views/users/_bookmarks.html.erb
@@ -4,15 +4,14 @@
       <div class="card-header"><%= bookmark.achievement.title %></div>
       <div class="card-body">
         <% if bookmark.user == current_user && bookmark.locked? %>
-          <button type="button" class="btn btn-primary" id="unlock_button-<%= bookmark.id %>" data-toggle="modal" data-target="#unlockModal-<%= bookmark.id %>">実績解除</button>
+          <button type="button" class="btn btn-primary" id="unlock_button-<%= bookmark.id %>" data-toggle="modal" data-target="#unlockModal-<%= bookmark.id %>" data-keyboard="false" data-backdrop="static">
+            実績解除
+          </button>
           <div class="modal fade" id="unlockModal-<%= bookmark.id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title"><%= bookmark.achievement.title %></h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
                 </div>
                 <div class="modal-body" id="modal-body-<%= bookmark.id %>">
                 </div>
