--- a/app/views/achievements/new.html.erb
+++ b/app/views/achievements/new.html.erb
@@ -6,6 +6,11 @@
         <%= form.label :title %>
         <%= form.text_field :title, class: "form-control" %>
       </div>
+      <br>
+      <div class="form_group">
+        <%= form.label :tag_list %>
+        <%= form.text_field :tag_list, class: "form-control" %>
+      </div>
     </div>
   </div>
   <br>
