--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                   <%= link_to 'マイページ', user_path(current_user), class: "dropdown-item" %>
+                  <%= link_to 'タグ一覧', tags_path, class: "dropdown-item" %>
                   <div class="dropdown-divider"></div>
                   <%= link_to 'ログアウト', logout_path, class: "dropdown-item" %>
                 </div>
