--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,8 +1,7 @@
 <br>
 <h4>タグ一覧</h4>
-<hr>
-<div class="list-group">
+<div class="collection">
   <% @tags.each do |tag| %>
-    <%= link_to "#{tag.name} (#{tag.taggings_count})", tag_path(tag), class: "list-group-item list-group-item-action" %>
+    <%= link_to "#{tag.name} (#{tag.taggings_count})", tag_path(tag), class: "collection-item" %>
   <% end %>
 </div>
