--- a/app/views/achievements/index.html.erb
+++ b/app/views/achievements/index.html.erb
@@ -1,27 +1,29 @@
-<br>
-<div class="row">
-  <div class="col-12">
-  <%= link_to '実績を登録する', new_achievement_path, class: "btn btn-success" %>
-  </div>
+<div class="fixed-action-btn">
+  <a class="btn-floating btn-large red" href="<%= new_achievement_path  %>">
+    <i class="large material-icons">mode_edit</i>
+  </a>
 </div>
-<hr>
+
 <div class="row">
   <% @achievements.each do |achievement| %>
-    <% unless achievement.users.include?(current_user) %>
-      <div class="col-12">
-        <div class="card">
-          <div class="card-header"><%= achievement.title %></div>
-          <div class="card-body">
-            <% achievement.tags.each do |tag| %>
-              <%= link_to tag.name, tag_path(tag), class: "badge badge-info" %>
-            <% end %>
-            <br>
-            <br>
-            <%= button_to 'ブックマーク', user_bookmarks_path(current_user), params: { bookmark: { achievement_id: achievement.id } }, class: "btn btn-primary" if current_user %>
-          </div>
+    <div class="col s12">
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title"><%= achievement.title %></span>
+          <% achievement.tags.each do |tag| %>
+            <%= link_to "##{tag.name}", tag_path(tag), class: "chip" %>
+          <% end %>
         </div>
-        <br>
+        <% if current_user %>
+          <div class="card-action">
+            <% if achievement.users.include?(current_user) %>
+              <span class="grey-text text-darken-1">ストック済</span>
+            <% else %>
+              <%= link_to 'ストックする', user_bookmarks_path(current_user, params: { bookmark: { achievement_id: achievement.id } }), method: :post %>
+            <% end %>
+          </div>
+        <% end %>
       </div>
-    <% end %>
+    </div>
   <% end %>
 </div>
