--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,32 +11,43 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <%= link_to 'Unlock', root_path, class: "navbar-brand" %>
-        <div>
-          <ul class="navbar-nav mr-auto">
-          </ul>
-          <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-              <% if current_user %>
-                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <%= current_user.nickname %>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                  <%= link_to 'マイページ', user_path(current_user), class: "dropdown-item" %>
-                  <%= link_to 'タグ一覧', tags_path, class: "dropdown-item" %>
-                  <div class="dropdown-divider"></div>
-                  <%= link_to 'ログアウト', logout_path, class: "dropdown-item" %>
-                </div>
-              <% else %>
-                <%= link_to 'Twitterログイン', '/auth/twitter', class: "nav-link" %>
-              <% end %>
-            </li>
+    <ul id="logined_dropdown_menu" class="dropdown-content">
+      <% if current_user %>
+        <li><%= link_to 'マイページ', user_path(current_user), class: "dropdown-item" %></li>
+        <li><%= link_to 'タグ一覧', tags_path, class: "dropdown-item" %></li>
+        <li class="divider"></li>
+        <li><%= link_to 'ログアウト', logout_path, class: "dropdown-item" %></li>
+      <% end %>
+    </ul>
+    <nav>
+      <div class="nav-wrapper">
+        <div class="container">
+          <%= link_to 'Unlock', root_path, class: "brand-logo" %>
+          <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+          <ul class="right hide-on-med-and-down">
+            <% if current_user %>
+              <li><a class="dropdown-trigger" href="#!" data-target="logined_dropdown_menu"><%= current_user.nickname %><i class="material-icons right">arrow_drop_down</i></a></li>
+            <% else %>
+              <%= link_to 'Twitterログイン', '/auth/twitter', class: "nav-link" %>
+            <% end %>
           </ul>
         </div>
       </div>
     </nav>
+    <ul class="sidenav" id="mobile">
+      <% if current_user %>
+        <li><%= link_to 'マイページ', user_path(current_user), class: "dropdown-item" %></li>
+        <li><%= link_to 'タグ一覧', tags_path, class: "dropdown-item" %></li>
+        <li class="divider"></li>
+        <li><%= link_to 'ログアウト', logout_path, class: "dropdown-item" %></li>
+      <% else %>
+        <li>
+          <%= link_to '/auth/twitter', class: "nav-link" do %>
+            <span class="light-blue-text text-accent-3">Twitterでログイン</span>
+          <% end %>
+        </li>
+      <% end %>
+    </ul>
     <div class="container">
       <%= yield %>
     </div>
