--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,23 +1,26 @@
 <br>
-<h5><span class="badge badge-info"><%= @tag.name %></span> がタグ付けされている実績</h5>
+<h5><span class="chip">#<%= @tag.name %></span> がタグ付けされている実績</h5>
 <br>
 <div class="row">
   <% @achievements.each do |achievement| %>
-    <div class="col-12">
+    <div class="col s12">
       <div class="card">
-        <div class="card-header"><%= achievement.title %></div>
-        <div class="card-body">
+        <div class="card-content">
+          <span class="card-title"><%= achievement.title %></span>
           <% achievement.tags.each do |tag| %>
-            <%= link_to tag.name, tag_path(tag), class: "badge badge-info" %>
-          <% end %>
-          <br>
-          <br>
-          <% if current_user && !achievement.users.include?(current_user) %>
-            <%= button_to 'ブックマーク', user_bookmarks_path(current_user), params: { bookmark: { achievement_id: achievement.id } }, class: "btn btn-primary" %>
+            <%= link_to "##{tag.name}", tag_path(tag), class: "chip" %>
           <% end %>
         </div>
+        <% if current_user %>
+          <div class="card-action">
+            <% if achievement.users.include?(current_user) %>
+              <span class="grey-text text-darken-1">ストック済</span>
+            <% else %>
+              <%= link_to 'ストックする', user_bookmarks_path(current_user, params: { bookmark: { achievement_id: achievement.id } }), method: :post %>
+            <% end %>
+          </div>
+        <% end %>
       </div>
-      <br>
     </div>
   <% end %>
 </div>
