--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <br>
 <div class="row valign-wrapper">
   <%= image_tag current_user.image_url, class: "circle responsive-img" %>
-  <span class="black-text"><%= current_user.nickname %></span>
+  <h4 class="black-text"><%= current_user.nickname %> さんの実績</h4>
 </div>
 
 <div class="row">
