--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -25,32 +25,39 @@
 <div class="row">
   <% if current_user %>
     <% if @user == current_user %>
-      <div class="col s12 col l6">
-          <%= link_to '自分の実績を見る', user_path(current_user), class: "btn orange btn-block" %>
-      </div>
       <div class="col s12 l6">
         <%= link_to 'みんなの実績を見る', achievements_path, class: "btn btn-block" %>
       </div>
-    <% else %>
-      <div class="col s12 l4">
-        <%= link_to "#{@user.nickname} さんの実績を見る", user_path(@user), class: "btn orange btn-block" %>
-      </div>
-      <div class="col s12 l4">
-        <%= link_to 'みんなの実績を見る', achievements_path, class: "btn btn-outline-secondary btn-block" %>
-      </div>
-      <div class="col s12 l4">
+      <div class="col s12 col l6">
           <%= link_to '自分の実績を見る', user_path(current_user), class: "btn light-blue accent-3 btn-block" %>
+      </div>
+    <% else %>
+      <div class="col s12 l3">
+        <%= link_to "#{@user.nickname} さんの実績を見る", user_path(@user), class: "btn red btn-block" %>
+      </div>
+      <div class="col s12 l3">
+        <%= link_to 'みんなの実績を見る', achievements_path, class: "btn btn-block" %>
+      </div>
+      <div class="col s12 l3">
+        <%= link_to '自分の実績を見る', user_path(current_user), class: "btn light-blue accent-3 btn-block" %>
+      </div>
+      <div class="col s12 l3">
+        <% if @bookmark.achievement.users.include?(current_user) %>
+          <a class="btn disabled btn-block">ストック済</a>
+        <% else %>
+          <%= link_to 'この実績をストックする', user_bookmarks_path(current_user, params: { bookmark: { achievement_id: @bookmark.achievement.id } }), method: :post, class: "btn orange btn-block" %>
+        <% end %>
       </div>
     <% end %>
   <% else %>
     <div class="col s12 l4">
-      <%= link_to "#{@user.nickname} さんの実績を見る", user_path(@user), class: "btn orange btn-block" %>
+      <%= link_to "#{@user.nickname} さんの実績を見る", user_path(@user), class: "btn red btn-block" %>
     </div>
     <div class="col s12 l4">
       <%= link_to 'みんなの実績を見る', achievements_path, class: "btn btn-block" %>
     </div>
     <div class="col s12 l4">
-        <%= link_to 'ログイン', '/auth/twitter', class: "btn light-blue accent-3 btn-block" %>
+        <%= link_to 'ログインする', '/auth/twitter', class: "btn light-blue accent-3 btn-block" %>
     </div>
   <% end %>
 </div>
