--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,7 @@
       <% if current_user %>
         <li><%= link_to 'マイページ', user_path(current_user), class: "dropdown-item" %></li>
         <li><%= link_to 'タグ一覧', tags_path, class: "dropdown-item" %></li>
+        <li><%= link_to 'みんなの実績', achievements_path, class: "dropdown-item" %></li>
         <li class="divider"></li>
         <li><%= link_to 'ログアウト', logout_path, class: "dropdown-item" %></li>
       <% else %>
