--- a/app/views/achievements/new.html.erb
+++ b/app/views/achievements/new.html.erb
@@ -1,5 +1,5 @@
 <h4 class="header">新しい実績</h4>
-<%= form_with(model: @achievement, url: achievements_path, local: true) do |form| %>
+<%= form_with(model: @achievement, url: achievements_path, method: :post, local: true) do |form| %>
   <div class="row">
     <div class="col-12">
       <div>
