--- a/app/views/achievements/new.html.erb
+++ b/app/views/achievements/new.html.erb
@@ -2,13 +2,13 @@
 <%= form_with(model: @achievement, url: achievements_path, method: :post, local: true) do |form| %>
   <div class="row">
     <div class="col-12">
-      <div>
+      <div class="input-field">
         <%= form.label :title %>
-        <%= form.text_field :title %>
+        <%= form.text_field :title, autocomplete: "off", class: "autocomplete" %>
       </div>
       <br>
       <%= form.label :tag_list %>
-      <div class="chips">
+      <div class="chips chips-autocomplete">
       </div>
       <%= form.hidden_field :tag_list %>
     </div>
@@ -23,3 +23,26 @@
     </div>
   </div>
 <% end %>
+
+<script>
+  $('input.autocomplete').autocomplete({
+    data: <%= raw @titles_json %>
+  });
+</script>
+<script>
+  $('.chips-autocomplete').chips({
+    autocompleteOptions: {
+      data:  <%= raw @chips_json %>
+    },
+    placeholder: '5つまで',
+    limit: 5,
+    onChipAdd: function() {
+      data = M.Chips.getInstance($('.chips')).chipsData;
+      document.getElementById('achievement_tag_list').value = data.map(x => x.tag);
+    },
+    onChipDelete: function() {
+      data = M.Chips.getInstance($('.chips')).chipsData;
+      document.getElementById('achievement_tag_list').value = data.map(x => x.tag);
+    }
+  });
+</script>
