--- a/app/views/achievements/index.html.erb
+++ b/app/views/achievements/index.html.erb
@@ -7,27 +7,27 @@
 <% end %>
 
 <h4 class="header">みんなの実績</h4>
-<p>なにかができるようになったとき、初めての体験をしたとき、人生のイベントを経験したとき、実績を解除してシェアしよう！</p>
 <div class="row">
-  <% @achievements.each do |achievement| %>
+  <div class="col s12">
+    <p>なにかができるようになったとき、初めての体験をしたとき、人生のイベントを経験したとき、実績を解除してシェアしよう！</p>
+  </div>
+</div>
+<div class="row">
+  <%= form_with url: search_path, method: :get do |form| %>
     <div class="col s12">
-      <div class="card">
-        <div class="card-content">
-          <span class="card-title"><%= achievement.title %></span>
-          <% achievement.tags.each do |tag| %>
-            <%= link_to "##{tag.name}", tag_path(tag), class: "chip" %>
-          <% end %>
-        </div>
-        <% if current_user %>
-          <div class="card-action">
-            <% if achievement.users.include?(current_user) %>
-              <span class="grey-text text-darken-1">ストック済</span>
-            <% else %>
-              <%= link_to 'ストックする', user_bookmarks_path(current_user, params: { bookmark: { achievement_id: achievement.id } }), method: :post %>
-            <% end %>
-          </div>
-        <% end %>
+    <div class="row">
+      <div class="input-field col s10">
+      <i class="material-icons prefix">search</i>
+        <%= form.label :search, '実績を検索' %>
+        <%= form.text_field :search, autocomplete: "off" %>
+      </div>
+      <div class="input-field col s2">
+      <%= form.submit '検索', class: "btn" %>
+      </div>
       </div>
     </div>
   <% end %>
+  <div id="achievements">
+    <%= render 'achievements', { achievements: @achievements } %>
+  </div>
 </div>
