--- a/app/views/tags/_achievements.html.erb
+++ b/app/views/tags/_achievements.html.erb
@@ -2,7 +2,9 @@
   <div class="col s12">
     <div class="card">
       <div class="card-content">
-        <span class="card-title"><%= achievement.title %></span>
+        <%= link_to achievement_path(achievement) do %>
+          <span class="card-title"><%= achievement.title %></span>
+        <% end %>
         <% achievement.tags.each do |tag| %>
           <%= link_to "##{tag.name}", tag_path(tag), class: "chip" %>
         <% end %>
