--- a/app/views/users/_bookmarks.html.erb
+++ b/app/views/users/_bookmarks.html.erb
@@ -3,7 +3,9 @@
     <div class="col s12">
       <div class="card">
         <div class="card-content">
-          <span class="card-title"><%= bookmark.achievement.title %></span>
+          <%= link_to achievement_path(bookmark.achievement) do %>
+            <span class="card-title"><%= bookmark.achievement.title %></span>
+          <% end %>
           <% bookmark.achievement.tags.each do |tag| %>
             <%= link_to "##{tag.name}", tag_path(tag), class: "chip" %>
           <% end %>
