--- a/app/views/users/_bookmarks_edit.html.erb
+++ b/app/views/users/_bookmarks_edit.html.erb
@@ -3,7 +3,7 @@
     <div class="col s12">
       <div class="card">
         <div class="card-content">
-          <span class="card-title"><%= bookmark.achievement.title %></span>
+          <span class="card-title blue-text"><%= bookmark.achievement.title %></span>
           <% bookmark.achievement.tags.each do |tag| %>
             <%= link_to "##{tag.name}", tag_path(tag), class: "chip" %>
           <% end %>
