feat: ユーザの編集ページに戻るボタン追加

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,8 @@
+<div class="fixed-action-btn">
+  <a class="btn-floating btn-large grey" href="<%= user_path(current_user) %>">
+    <i class="large material-icons">arrow_back</i>
+  </a>
+</div>
 <br>
 <div class="row valign-wrapper">
   <%= image_tag current_user.image_url, class: "circle responsive-img" %>
