--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,21 +20,23 @@
         <li><%= link_to 'ログアウト', logout_path, class: "dropdown-item" %></li>
       <% end %>
     </ul>
-    <nav>
-      <div class="nav-wrapper">
-        <div class="container">
-          <%= link_to 'Unlock', root_path, class: "brand-logo" %>
-          <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-          <ul class="right hide-on-med-and-down">
-            <% if current_user %>
-              <li><a class="dropdown-trigger" href="#!" data-target="logined_dropdown_menu"><%= current_user.nickname %><i class="material-icons right">arrow_drop_down</i></a></li>
-            <% else %>
-              <li><%= link_to 'Twitterログイン', '/auth/twitter', class: "nav-link" %></li>
-            <% end %>
-          </ul>
+    <div class="navbar-fixed">
+      <nav>
+        <div class="nav-wrapper">
+          <div class="container">
+            <%= link_to 'Unlock', root_path, class: "brand-logo" %>
+            <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <ul class="right hide-on-med-and-down">
+              <% if current_user %>
+                <li><a class="dropdown-trigger" href="#!" data-target="logined_dropdown_menu"><%= current_user.nickname %><i class="material-icons right">arrow_drop_down</i></a></li>
+              <% else %>
+                <li><%= link_to 'Twitterログイン', '/auth/twitter', class: "nav-link" %></li>
+              <% end %>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
     <ul class="sidenav" id="mobile">
       <% if current_user %>
         <li><%= link_to 'マイページ', user_path(current_user), class: "dropdown-item" %></li>
