--- a/app/views/bookmarks/_unlocked_modal_body.html.erb
+++ b/app/views/bookmarks/_unlocked_modal_body.html.erb
@@ -2,7 +2,7 @@
   <h5 class="center-align">実績を解除しました！</h5>
   <div class="center-align">
   <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button"
-     data-text="実績を解除しました!"
+     data-text="実績を解除しました! #リアル実績解除 #Unlock"
      data-url="<%= user_bookmark_url(current_user, bookmark) %>"
      data-lang="ja"
      target="_blank"
