--- a/app/views/users/_bookmarks_edit.html.erb
+++ b/app/views/users/_bookmarks_edit.html.erb
@@ -1,19 +1,6 @@
-<div class="row">
+<div class="row" <%= "id=edit-locked-bookmarks" if status == 'locked'  %>>
   <% bookmarks.each do |bookmark| %>
-    <div class="col s12">
-      <div class="card">
-        <div class="card-content">
-          <span class="card-title blue-text"><%= bookmark.achievement.title %></span>
-          <% bookmark.achievement.tags.each do |tag| %>
-            <%= link_to "##{tag.name}", tag_path(tag), class: "chip" %>
-          <% end %>
-        </div>
-        <div class="card-action">
-          <%= link_to '解除取消', user_bookmark_path(current_user, bookmark), method: :patch, class: "btn orange" if bookmark.unlocked? %>
-          <%= link_to 'ストック取消', user_bookmark_path(current_user, bookmark), method: :delete, class: "btn red" %>
-        </div>
-      </div>
-    </div>
+    <%= render 'bookmark_edit_card', { bookmark: bookmark } %>
   <% end %>
 </div>
 <%= paginate bookmarks, remote: true, param_name: "#{status}_page" %>
