feat: ストック取り消しを Ajax で

--- a/app/views/users/_bookmark_edit_card.html.erb
+++ b/app/views/users/_bookmark_edit_card.html.erb
@@ -8,7 +8,7 @@
     </div>
     <div class="card-action">
       <%= link_to '解除取消', user_bookmark_path(current_user, bookmark), method: :patch, remote: true, class: "btn orange" if bookmark.unlocked? %>
-      <%= link_to 'ストック取消', user_bookmark_path(current_user, bookmark), method: :delete, class: "btn red" %>
+      <%= link_to 'ストック取消', user_bookmark_path(current_user, bookmark), method: :delete, remote: true, class: "btn red" %>
     </div>
   </div>
 </div>
