--- a/app/views/users/show.js.erb
+++ b/app/views/users/show.js.erb
@@ -1,6 +1,20 @@
 $("#unlocked").html('<%= j(render "bookmarks", { bookmarks: @unlocked_bookmarks, status: 'unlocked' }) %>')
 $("#locked").html('<%= j(render "bookmarks", { bookmarks: @locked_bookmarks, status: 'locked' }) %>')
 $(document).ready(function(){
+  $('.datepicker').datepicker({
+    container: 'body',
+    format: 'yyyy/mm/dd',
+    showMonthAfterYear: true,
+    i18n: {
+      cancel: 'キャンセル',
+      done: '決定',
+      months: ["1月", "2月", "3月", "4月", "5月", "6月", "7月", "8月", "9月", "10月", "11月", "12月"],
+      monthsShort: ["1 /", "2 /", "3 /", "4 /", "5 /", "6 /", "7 /", "8 /", "9 /", "10 /", "11 /", "12 /"],
+      weekdays: ['日', '月', '火', '水', '木', '金', '土'],
+      weekdaysShort: ['日', '月', '火', '水', '木', '金', '土'],
+      weekdaysAbbrev: ['日', '月', '火', '水', '木', '金', '土']
+    }
+  });
   $('.modal').modal({
     onCloseEnd: function() {
       if (document.getElementById('unlock-sign') != null) {
