--- a/app/views/achievements/index.html.erb
+++ b/app/views/achievements/index.html.erb
@@ -9,7 +9,7 @@
 <h4 class="header">みんなの実績</h4>
 <div class="row">
   <div class="col s12">
-    <p>なにかができるようになったとき、初めての体験をしたとき、人生のイベントを経験したとき、実績を解除してシェアしよう！</p>
+    <p>目標を達成したとき、初めての体験をしたとき、人生のイベントを経験したとき… 実績を解除してシェアしよう！</p>
   </div>
 </div>
 <div class="row">
