--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
 <br>
 <div class="row valign-wrapper">
   <%= image_tag @user.image_url, class: "circle responsive-img" %>
-  <h4 class="black-text"><%= @user.nickname %> さんの実績</h4>
+  <h4 class="black-text"><%= @user.nickname %>の実績</h4>
 </div>
 <div class="row">
   <% if @user == current_user %>
