refactor: 冗長なメッセージを削除

--- a/app/views/achievements/new.html.erb
+++ b/app/views/achievements/new.html.erb
@@ -7,8 +7,7 @@
         <%= form.text_field :title, autocomplete: "off", class: "autocomplete" %>
       </div>
       <br>
-      <label class="tooltipped" for="achievement_tag_list" data-position="right" data-tooltip="タグ付けすることで他の人が実績を探しやすくなります">タグ</label>
-      <i class="material-icons tooltipped" data-position="right" data-tooltip="同じ実績が既に存在する場合、タグの上書きはできません">info</i>
+      <label>タグ</label>
       <div class="chips chips-autocomplete">
       </div>
       <%= form.hidden_field :tag_list %>
