--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,8 +12,8 @@
 </div>
 <div class="row">
   <% if @user == current_user %>
-    <div class="col s12">
-      <%= link_to '新しい実績を作る', new_achievement_path, class: "btn" %>
+    <div class="col s12 col m5 col l3">
+      <%= link_to '新しい実績を作る', new_achievement_path, class: "red lighten-2 btn btn-block" %>
     </div>
     <br>
     <br>
