--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= display_meta_tags(default_meta_tags) %>
     <%= analytics_init if Rails.env.production? && ENV['TRACKING_ID']%>
-  </head>
+    <%= favicon_link_tag('favicon.ico') %>
+  <link rel="manifest" href="/manifest.json" />
+<meta name="apple-mobile-web-app-capable" content="yes"></head>
 
   <body>
     <ul id="logined_dropdown_menu" class="dropdown-content">
